    - Action 0 ship property 1C.
    - Action 0 cargo properties 1B, 1C.
    - Action 0 general variable properties 13..15.
    - Action 2 object variables 43, 47.
    - Callback 10 works for road vehicles and ships as well.
  - Add support for string code 9A 0D..9A 15.
  - Change format of some warning messages to provide more information.
  - Fix stack validator triggering a (wrong) assert
- GRFCodec specific changes:
  - Prevent pcxfile::expirelines from reading more lines than the spritesheet has.
  - Fix several mismatched delete/free valgrind warnings.
  - Fix possible reading beyond a buffer causing crashes.

Changes in 5.0.0 (2010-10-17)
- Merge the source packages of GRFCodec (1.0.0) and NFORenum (4.0.0).
  This means that this package now requires Boost 1.36 or higher.
- Add command line option to silence all progress output.
- Add command line option to refresh all data files.
- Fix Cygwin compilation issues.
- Fix UPX-ing of release binaries under some circumstances.
- Fix difference between GRFCodec and NFORenum escapes format.
- (devel) Fix putting version.def twice in the source bundle.
- (devel) Use directories from the Make conventions for installation
  directories and add a few "parameters" to disable installation of
  certain bits of documentation.
- (devel) Disable strip and UPX as default.
- (devel) Add make distclean that removes Makefile.local as well.
- NFORenum specific changes
  - Data file updates
    - Action 0 objects properties 11..16.
    - Action 2 variable 5F had wrong length for most features.
    - Action 2 objects variables 42, 44..46, 5F, 60..64.
    - Action 2 callbacks 157..15D.
    - Action 5 type 15.
    - Action D patch variables 12, 13.
  - Add support for reading the (Action 14) version of other NewGRFs via Action D
    parameter 7E.
  - Fix bogus warning when using \d<num> in an action 2 for features 7/9/F.
  - Fix returning a non-zero exit code upon an unrecognised command line option.
- GRFCodec specific changes